added comments to ghost

--- a/_posts/2016-07-29-ghost-in-the-wires.html
+++ b/_posts/2016-07-29-ghost-in-the-wires.html
@@ -1,9 +1,10 @@
 ---
 title:  "Ghost in the Wires"
+comments: true
 date:   2016-07-29 12:14:49 -0400
 type: text
 description: I recently bought and read the paperback version of Ghost in the Wires by Kevin Mitnick. As an exciting easter egg, the book contains encrypted messages at the beginning of each chapter. I tried to crack each one, this page contains my progress. 
-url: GITW/
+url: /GITW/
 ---
 <!doctype html>
 <html>
