--- a/GITW/index.html
+++ b/GITW/index.html
@@ -1017,5 +1017,21 @@ A: </p><hr /><h5><a name='header-c496' class='md-header-anchor '></a>Chapter 38<
 0 as . : ????????oiwinghmixglonmiqxlndmakfmkfmkwosdrxutkarcae?njrr
 0 as - : ????????smdmau?impuysaimfpyawinrqirqirdsowkpgernk?ntvabkk</pre><p>Q: 
 A: </p></div>
+
+<div id="disqus_thread"></div>
+    <script>
+    var disqus_config = function () {
+    this.page.url = {{ site.url }}{{ page.url }};  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = {{ page.url }}; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = '//drew-dunne.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </body>
 </html>
