--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
   <h1 class="page-heading" id="posts">About Me</h1>
   <div class="about">
     <p>Currently a student at Cornell University majoring in Computer Science along with minors in Electrical and Computer Engineering and Business. At school I am a part of CUAppDev, a project team that produces iOS apps. When I'm not working, I'm usually playing sports, watching movies or doing the daily crossword puzzle. </p>
-    <p>I like to open source as much as my software as I can. My GitHub page can be found <a href="http://github.com/drewsdunne">here</a></p>
+    <p>I like to open source as much of my software as I can. My GitHub page can be found <a href="http://github.com/drewsdunne">here</a></p>
   </div>
 
   <h1 class="page-heading" id="posts">Projects</h1>
